// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all 1`] = `
Object {
  "expected": Array [
    "b",
  ],
  "location": Object {
    "column": 2,
    "index": 1,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`all 2`] = `
Object {
  "expected": Array [
    "b",
  ],
  "location": Object {
    "column": 2,
    "index": 1,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`all 3`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "b",
    "c",
  ],
}
`;

exports[`all 4`] = `
Object {
  "expected": Array [
    "b",
  ],
  "location": Object {
    "column": 2,
    "index": 1,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`all 5`] = `
Object {
  "expected": Array [
    "c",
  ],
  "location": Object {
    "column": 3,
    "index": 2,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`all 6`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`all 7`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`and 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "x",
    "y",
  ],
}
`;

exports[`and failure 1`] = `
Object {
  "expected": Array [
    "y",
  ],
  "location": Object {
    "column": 2,
    "index": 1,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`and failure 2`] = `
Object {
  "expected": Array [
    "x",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`and failure 3`] = `
Object {
  "expected": Array [
    "x",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`and failure 4`] = `
Object {
  "expected": Array [
    "x",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`and success triple 2 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "x",
    "y",
    "z",
  ],
}
`;

exports[`and triple 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    Array [
      "x",
      "y",
    ],
    "z",
  ],
}
`;

exports[`desc 1`] = `
Object {
  "type": "ParseOK",
  "value": 9,
}
`;

exports[`desc 2`] = `
Object {
  "expected": Array [
    "number",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`emoji length 1`] = `
Object {
  "type": "ParseOK",
  "value": Object {
    "end": Object {
      "column": 4,
      "index": 6,
      "line": 1,
    },
    "name": "Emoji",
    "start": Object {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "type": "ParseNode",
    "value": "🙂🙂🙂",
  },
}
`;

exports[`fail 1`] = `
Object {
  "expected": Array [
    "apple",
    "banana",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`fail 2`] = `
Object {
  "expected": Array [
    "other",
    "apple",
    "banana",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`lazy 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "x",
    "x",
    Array [
      "x",
      Array [],
      Array [
        "x",
      ],
      Array [
        Array [
          "x",
        ],
      ],
      "x",
    ],
    "x",
  ],
}
`;

exports[`lisp lists 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "b",
    "c",
  ],
}
`;

exports[`many0 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [],
}
`;

exports[`many0 2`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
  ],
}
`;

exports[`many0 3`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "a",
  ],
}
`;

exports[`many0 4`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "a",
    "a",
  ],
}
`;

exports[`many0 5`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "a",
    "a",
    "a",
  ],
}
`;

exports[`many0 6`] = `
Object {
  "expected": Array [
    "a",
    "<EOF>",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`many1 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
  ],
}
`;

exports[`many1 2`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "a",
  ],
}
`;

exports[`many1 3`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "a",
    "a",
  ],
}
`;

exports[`many1 4`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "a",
    "a",
    "a",
  ],
}
`;

exports[`many1 5`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`many1 6`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`match 1`] = `
Object {
  "type": "ParseOK",
  "value": "12",
}
`;

exports[`match 2`] = `
Object {
  "expected": Array [
    "/\\\\d+/",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`matchEOF 1`] = `
Object {
  "type": "ParseOK",
  "value": "<EOF>",
}
`;

exports[`matchEOF 2`] = `
Object {
  "expected": Array [
    "<EOF>",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`node 1`] = `
Object {
  "type": "ParseOK",
  "value": Object {
    "end": Object {
      "column": 4,
      "index": 3,
      "line": 1,
    },
    "name": "Identifier",
    "start": Object {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "type": "ParseNode",
    "value": "abc",
  },
}
`;

exports[`node 2`] = `
Object {
  "type": "ParseOK",
  "value": Object {
    "end": Object {
      "column": 2,
      "index": 5,
      "line": 3,
    },
    "name": "ABC",
    "start": Object {
      "column": 1,
      "index": 0,
      "line": 1,
    },
    "type": "ParseNode",
    "value": "A
B
C",
  },
}
`;

exports[`or 1`] = `
Object {
  "type": "ParseOK",
  "value": "a",
}
`;

exports[`or 2`] = `
Object {
  "type": "ParseOK",
  "value": "b",
}
`;

exports[`or 3`] = `
Object {
  "expected": Array [
    "a",
    "b",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`or 4`] = `
Object {
  "expected": Array [
    "<EOF>",
  ],
  "location": Object {
    "column": 2,
    "index": 1,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`or 5`] = `
Object {
  "expected": Array [
    "a",
    "b",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`sepBy0 1`] = `
Object {
  "type": "ParseOK",
  "value": Array [],
}
`;

exports[`sepBy0 2`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
  ],
}
`;

exports[`sepBy0 3`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "a",
  ],
}
`;

exports[`sepBy0 4`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "a",
    "a",
  ],
}
`;

exports[`sepBy0 5`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 5,
    "index": 4,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`sepBy0 6`] = `
Object {
  "expected": Array [
    "a",
    "<EOF>",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`sepBy1 1`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`sepBy1 2`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
  ],
}
`;

exports[`sepBy1 3`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "a",
  ],
}
`;

exports[`sepBy1 4`] = `
Object {
  "type": "ParseOK",
  "value": Array [
    "a",
    "a",
    "a",
  ],
}
`;

exports[`sepBy1 5`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 5,
    "index": 4,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`sepBy1 6`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`skip 1`] = `
Object {
  "type": "ParseOK",
  "value": "a",
}
`;

exports[`skip 2`] = `
Object {
  "expected": Array [
    "b",
  ],
  "location": Object {
    "column": 2,
    "index": 1,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`skip 3`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`skip 4`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`skip 5`] = `
Object {
  "expected": Array [
    "<EOF>",
  ],
  "location": Object {
    "column": 3,
    "index": 2,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`next 1`] = `
Object {
  "type": "ParseOK",
  "value": "b",
}
`;

exports[`next 2`] = `
Object {
  "expected": Array [
    "b",
  ],
  "location": Object {
    "column": 2,
    "index": 1,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`next 3`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`next 4`] = `
Object {
  "expected": Array [
    "a",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`next 5`] = `
Object {
  "expected": Array [
    "<EOF>",
  ],
  "location": Object {
    "column": 3,
    "index": 2,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`test a test 1`] = `
Object {
  "type": "ParseOK",
  "value": "x",
}
`;

exports[`trim 1`] = `
Object {
  "type": "ParseOK",
  "value": "x",
}
`;

exports[`trim 2`] = `
Object {
  "expected": Array [
    "~",
  ],
  "location": Object {
    "column": 3,
    "index": 2,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`trim 3`] = `
Object {
  "expected": Array [
    "x",
  ],
  "location": Object {
    "column": 2,
    "index": 1,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`trim 4`] = `
Object {
  "expected": Array [
    "~",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`wrap 1`] = `
Object {
  "type": "ParseOK",
  "value": "x",
}
`;

exports[`wrap 2`] = `
Object {
  "expected": Array [
    ">",
  ],
  "location": Object {
    "column": 3,
    "index": 2,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`wrap 3`] = `
Object {
  "expected": Array [
    "x",
  ],
  "location": Object {
    "column": 2,
    "index": 1,
    "line": 1,
  },
  "type": "ParseFail",
}
`;

exports[`wrap 4`] = `
Object {
  "expected": Array [
    "<",
  ],
  "location": Object {
    "column": 1,
    "index": 0,
    "line": 1,
  },
  "type": "ParseFail",
}
`;
